model/Fortran.h

  class Configuration;
  class DateTime;
// Locations key type
typedef int F90locs;
// Goms key type
typedef int F90goms;
// Fields key type
typedef int F90flds;
// ObOp trajectory
typedef int F90ootrj;
  void wrfjedi_field_getvalues_notraj_f90(const F90flds &, const F90locs &,
                             const eckit::Configuration * const *,
                             const F90goms &);
  void wrfjedi_field_getvalues_f90(const F90flds &, const F90locs &,
                             const eckit::Configuration * const *,
                             const F90goms &, const F90ootrj &);
  void wrfjedi_field_getvalues_tl_f90(const F90flds &, const F90locs &,
                             const eckit::Configuration * const *,
                             const F90goms &, const F90ootrj &);
  void wrfjedi_field_getvalues_ad_f90(const F90flds &, const F90locs &,
                             const eckit::Configuration * const *,
                             const F90goms &, const F90ootrj &);
  void wrfjedi_field_gpnorm_f90(const F90flds &, const int &, double &);
  void wrfjedi_field_sizes_f90(const F90flds &, int &, int &, int &, int &);
  void wrfjedi_field_rms_f90(const F90flds &, double &);