model/wrfjedi_fields_interface.F90


implicit none
integer(c_int), intent(in) :: c_key_fld  !< Fields
type(c_ptr), intent(in) :: c_conf !< Configuration
type(c_ptr), intent(in) :: c_dt   !< DateTime

type(wrfjedi_field), pointer :: fld
type(datetime) :: fdate

call wrfjedi_field_registry%get(c_key_fld,fld)
call c_f_datetime(c_dt, fdate)
call write_file(fld, c_conf, fdate)

end subroutine wrfjedi_field_write_file_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_gpnorm_c(c_key_fld, kf, pstat) bind(c,name='wrfjedi_field_gpnorm_f90')
use iso_c_binding
use wrfjedi_fields_mod
use kinds
implicit none
integer(c_int), intent(in) :: c_key_fld
integer(c_int), intent(in) :: kf
real(c_double), intent(inout) :: pstat(3*kf)

type(wrfjedi_field), pointer :: fld
real(kind=kind_real) :: zstat(3, kf)
integer :: jj, js, jf

call wrfjedi_field_registry%get(c_key_fld,fld)

call gpnorm(fld, kf, zstat)
jj=0
do jf = 1, kf
  do js = 1, 3
    jj=jj+1
    pstat(jj) = zstat(js,jf)
  enddo
enddo

end subroutine wrfjedi_field_gpnorm_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_rms_c(c_key_fld, prms) bind(c,name='wrfjedi_field_rms_f90')
use iso_c_binding
use wrfjedi_fields_mod
use kinds
implicit none
integer(c_int), intent(in) :: c_key_fld
real(c_double), intent(inout) :: prms

type(wrfjedi_field), pointer :: fld
real(kind=kind_real) :: zz

call wrfjedi_field_registry%get(c_key_fld,fld)

call fldrms(fld, zz)

prms = zz

end subroutine wrfjedi_field_rms_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_getvalues_notraj_c(c_key_fld,c_key_loc,c_vars,c_key_gom) bind(c,name='wrfjedi_field_getvalues_notraj_f90')
use iso_c_binding
use wrfjedi_fields_mod
use ioda_locs_mod
use ioda_locs_mod_c, only: ioda_locs_registry
use ufo_vars_mod
use ufo_geovals_mod
use ufo_geovals_mod_c, only: ufo_geovals_registry
implicit none
integer(c_int), intent(in) :: c_key_fld  !< Fields to be interpolated
integer(c_int), intent(in) :: c_key_loc  !< List of requested locations
type(c_ptr), intent(in) :: c_vars  !< List of requested variables
integer(c_int), intent(in) :: c_key_gom  !< Interpolated values
type(wrfjedi_field), pointer :: fld
type(ioda_locs),  pointer :: locs
type(ufo_vars)  :: vars
type(ufo_geovals),  pointer :: gom

call wrfjedi_field_registry%get(c_key_fld, fld)
call ioda_locs_registry%get(c_key_loc, locs)
call ufo_vars_setup(vars, c_vars)
call ufo_geovals_registry%get(c_key_gom, gom)

call getvalues(fld, locs, vars, gom)

end subroutine wrfjedi_field_getvalues_notraj_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_getvalues_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='wrfjedi_field_getvalues_f90')
use iso_c_binding
use wrfjedi_fields_mod
use ioda_locs_mod
use ioda_locs_mod_c, only: ioda_locs_registry
use ufo_vars_mod
use ufo_geovals_mod
use ufo_geovals_mod_c, only: ufo_geovals_registry
use wrfjedi_getvaltraj_mod, only: wrfjedi_getvaltraj, wrfjedi_getvaltraj_registry
implicit none
integer(c_int), intent(in) :: c_key_fld  !< Fields to be interpolated
integer(c_int), intent(in) :: c_key_loc  !< List of requested locations
type(c_ptr), intent(in) :: c_vars  !< List of requested variables
integer(c_int), intent(in) :: c_key_gom  !< Interpolated values
integer(c_int), intent(in), optional :: c_key_traj !< Trajectory for interpolation/transforms
type(wrfjedi_field), pointer :: fld
type(ioda_locs),  pointer :: locs
type(ufo_vars)  :: vars
type(ufo_geovals),  pointer :: gom
type(wrfjedi_getvaltraj), pointer :: traj

call wrfjedi_field_registry%get(c_key_fld, fld)
call ioda_locs_registry%get(c_key_loc, locs)
call ufo_vars_setup(vars, c_vars)
call ufo_geovals_registry%get(c_key_gom, gom)
call wrfjedi_getvaltraj_registry%get(c_key_traj, traj)

call getvalues(fld, locs, vars, gom, traj)

end subroutine wrfjedi_field_getvalues_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_getvalues_tl_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) &
                                        bind(c,name='wrfjedi_field_getvalues_tl_f90')
use iso_c_binding
use wrfjedi_fields_mod
use ioda_locs_mod
use ioda_locs_mod_c, only: ioda_locs_registry
use ufo_vars_mod
use ufo_geovals_mod
use ufo_geovals_mod_c, only: ufo_geovals_registry
use wrfjedi_getvaltraj_mod, only: wrfjedi_getvaltraj, wrfjedi_getvaltraj_registry
implicit none
integer(c_int), intent(in) :: c_key_fld  !< Fields to be interpolated
integer(c_int), intent(in) :: c_key_loc  !< List of requested locations
type(c_ptr), intent(in) :: c_vars  !< List of requested variables
integer(c_int), intent(in) :: c_key_gom  !< Interpolated values
integer(c_int), intent(in) :: c_key_traj !< Trajectory for interpolation/transforms
type(wrfjedi_field), pointer :: fld
type(ioda_locs),  pointer :: locs
type(ufo_vars)  :: vars
type(ufo_geovals),  pointer :: gom
type(wrfjedi_getvaltraj), pointer :: traj

call wrfjedi_field_registry%get(c_key_fld, fld)
call ioda_locs_registry%get(c_key_loc, locs)
call ufo_vars_setup(vars, c_vars)
call ufo_geovals_registry%get(c_key_gom, gom)
call wrfjedi_getvaltraj_registry%get(c_key_traj, traj)

call getvalues_tl(fld, locs, vars, gom, traj)

end subroutine wrfjedi_field_getvalues_tl_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_getvalues_ad_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) &
                                        bind(c,name='wrfjedi_field_getvalues_ad_f90')
use iso_c_binding
use wrfjedi_fields_mod
use ioda_locs_mod
use ioda_locs_mod_c, only: ioda_locs_registry
use ufo_vars_mod
use ufo_geovals_mod
use ufo_geovals_mod_c, only: ufo_geovals_registry
use wrfjedi_getvaltraj_mod, only: wrfjedi_getvaltraj, wrfjedi_getvaltraj_registry
implicit none
integer(c_int), intent(in) :: c_key_fld  !< Fields to be interpolated
integer(c_int), intent(in) :: c_key_loc  !< List of requested locations
type(c_ptr), intent(in) :: c_vars  !< List of requested variables
integer(c_int), intent(in) :: c_key_gom  !< Interpolated values
integer(c_int), intent(in) :: c_key_traj !< Trajectory for interpolation/transforms
type(wrfjedi_field), pointer :: fld
type(ioda_locs),  pointer :: locs
type(ufo_vars)  :: vars
type(ufo_geovals),  pointer :: gom
type(wrfjedi_getvaltraj), pointer :: traj

call wrfjedi_field_registry%get(c_key_fld, fld)
call ioda_locs_registry%get(c_key_loc, locs)
call ufo_geovals_registry%get(c_key_gom, gom)
call ufo_vars_setup(vars, c_vars)
call wrfjedi_getvaltraj_registry%get(c_key_traj, traj)

call getvalues_ad(fld, locs, vars, gom, traj)

end subroutine wrfjedi_field_getvalues_ad_c

! ------------------------------------------------------------------------------

subroutine wrfjedi_field_sizes_c(c_key_self,nc,nf) bind(c,name='wrfjedi_field_sizes_f90')

use iso_c_binding
use wrfjedi_fields_mod

implicit none
integer(c_int), intent(in) :: c_key_self
integer(c_int), intent(inout) :: nc,nf
type(wrfjedi_field), pointer :: self

call wrfjedi_field_registry%get(c_key_self,self)

nf = self%nf
nc = 0

end subroutine wrfjedi_field_sizes_c

! ------------------------------------------------------------------------------   
